fixed vertical alignment of logos and text #337

--- a/src/static/src/scss/components/_collaboration.scss
+++ b/src/static/src/scss/components/_collaboration.scss
@@ -1,6 +1,6 @@
 .dmb-collaboration {
   $block: &;
-  align-items: flex-end;
+  align-items: baseline;
   display: flex;
   flex-wrap: wrap;
 
